methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:14: error: not found: value changeFin
  changeFin()
  ^FlowerPot:52: error: not found: value changeFin
changeFin(){
^